--- a/src/Blogger/BlogBundle/Resources/views/layout.html.twig
+++ b/src/Blogger/BlogBundle/Resources/views/layout.html.twig
@@ -2,13 +2,16 @@
 
 {% block stylesheets %}
     {{ parent() }}
-    {% stylesheets filter='cssrewrite'
-    '@BloggerBlogBundle/Resources/public/css/blog.css'
+    {% stylesheets
+        '@BloggerBlogBundle/Resources/public/css/blog.css'
+        '@BloggerBlogBundle/Resources/public/css/sidebar.css'
+        output='css/blogger.css'
+        filter='?yui_css'
     %}
     <link href="{{ asset_url }}" type="text/css" rel="stylesheet"/>
     {% endstylesheets %}
 {% endblock %}
 
 {% block sidebar %}
-    Sidebar content
+    {{ render(controller('BloggerBlogBundle:Page:sidebar' ))}}
 {% endblock %}
